--- a/source/index.html
+++ b/source/index.html
@@ -24,7 +24,7 @@
             <a href="#">Фото и видео</a>
           </li>
           <li class="site-list__item">
-            <a href="#">Форма Отзыва</a>
+            <a href="form.html">Форма Отзыва</a>
           </li>
           <li class="site-list__item">
             <a href="#">Html academy</a>
@@ -169,12 +169,10 @@
           </a>
         </li>
         <li class="social__item">
-          <span class="visually-hidden">Фейсбук</span>
           <a href="#" area-label="Фейсбук" class="social__link social__link--facebook">
           </a>
         </li>
         <li class="social__item">
-          <span class="visually-hidden">Ютуб</span>
           <a href="#" area-label="Ютуб" class="social__link social__link--youtube">
           </a>
         </li>
