--- a/source/index.html
+++ b/source/index.html
@@ -21,13 +21,13 @@
             <a>Главная</a>
           </li>
           <li class="site-list__item">
-            <a href="#">Фото и видео</a>
+            <a href="catalog.html">Фото и видео</a>
           </li>
           <li class="site-list__item">
             <a href="form.html">Форма Отзыва</a>
           </li>
           <li class="site-list__item">
-            <a href="#">Html academy</a>
+            <a href="https://htmlacademy.ru/intensive/adaptive">Html academy</a>
           </li>
         </ul>
       </div>
