--- a/source/form.html
+++ b/source/form.html
@@ -21,13 +21,13 @@
             <a href="index.html">Главная</a>
           </li>
           <li class="site-list__item">
-            <a href="#">Фото и видео</a>
+            <a href="catalog.html">Фото и видео</a>
           </li>
           <li class="site-list__item site-list__item--active">
             <a>Форма Отзыва</a>
           </li>
           <li class="site-list__item">
-            <a href="#">Html academy</a>
+            <a href="https://htmlacademy.ru/intensive/adaptive">Html academy</a>
           </li>
         </ul>
       </div>
