--- a/source/index.html
+++ b/source/index.html
@@ -193,15 +193,15 @@
       <a class="page-footer__hashtag" href="#">#visitSedona</a>
       <ul class="page-footer__social social">
         <li class="social__item">
-          <a href="#" area-label="Твиттер" class="social__link social__link--twitter">
+          <a href="#" aria-label="Твиттер" class="social__link social__link--twitter">
           </a>
         </li>
         <li class="social__item">
-          <a href="#" area-label="Фейсбук" class="social__link social__link--facebook">
+          <a href="#" aria-label="Фейсбук" class="social__link social__link--facebook">
           </a>
         </li>
         <li class="social__item">
-          <a href="#" area-label="Ютуб" class="social__link social__link--youtube">
+          <a href="#" aria-label="Ютуб" class="social__link social__link--youtube">
           </a>
         </li>
       </ul>
