--- a/source/catalog.html
+++ b/source/catalog.html
@@ -97,7 +97,7 @@
       Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!
     </p>
     <div class="video__wrapper">
-      <video src=""></video>
+      <video aria-label="Видеопрезентация" src=""></video>
     </div>
   </section>
 </main>
