--- a/source/index.html
+++ b/source/index.html
@@ -176,7 +176,7 @@
         <p class="search__description">
         Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне
         </p>
-        <a class="search__button" href="#">Найти гостиницу</a>
+        <a class="search__button button" href="#">Найти гостиницу</a>
       </div>
     </section>
     <section class="map">
