--- a/source/form.html
+++ b/source/form.html
@@ -113,9 +113,7 @@
           <h2 class="emotions-form__title">Опишите свои эмоции:</h2>
           <label for="txt-form">
             <span class="visually-hidden">Свободное поле</span>
-            <textarea class="txt-form" id="txt-form" cols="30" rows="10">
-              Опишите подробно все свои восторги
-            </textarea>
+            <textarea class="txt-form" id="txt-form" cols="30" rows="10">Опишите подробно все свои восторги</textarea>
           </label>
         </div>
         <input class="emotions__button button" type="submit" value="Отправить отзыв">
