--- a/source/form.html
+++ b/source/form.html
@@ -57,26 +57,26 @@
           <h2 class="person-form__title">Представьтесь:</h2>
             <label for="name-field">
               <span class="contact-form__subitem">Имя*:</span>
-              <input type="text" name="name" id="name-field" class="person-form__name" value="Петр" required>
+              <input type="text" name="name" id="name-field" class="person-form__field" value="Петр" required>
             </label>
             <label for="surname-field">
               <span class="contact-form__subitem">Фамилия*:</span>
-              <input type="text" name="surname" id="surname-field" class="person-form__surname" value="Иванов" required>
+              <input type="text" name="surname" id="surname-field" class="person-form__field" value="Иванов" required>
             </label>
             <label for="middlename-field">
               <span class="contact-form__subitem">Отчество</span>
-              <input type="text" name="middlename" id="middlename-field" class="person-form__middlename" value="Александрович" required>
+              <input type="text" name="middlename" id="middlename-field" class="person-form__field" value="Александрович" required>
             </label>
         </div>
         <div class="contact-form">
           <h2 class="contact-form__title">Контактная информация:</h2>
           <label for="tel-field">
             <span class="contact-form__subitem">Контактный телефон*:</span>
-            <input type="tel" name="tel" id="tel-field" class="contact-form__tel" value="Введите телефон" required>
+            <input type="tel" name="tel" id="tel-field" class="contact-form__field contact-form__field--tel" value="Введите телефон" required>
           </label>
           <label for="email-field">
             <span class="contact-form__subitem">Электронная почта*:</span>
-            <input type="email" name="email" id="email-field" class="contact-form__email" value="Введите e-mail" required>
+            <input type="email" name="email" id="email-field" class="contact-form__field contact-form__field--email" value="Введите e-mail" required>
           </label>
         </div>
         <div class="opinion-form">
