--- a/source/index.html
+++ b/source/index.html
@@ -2,6 +2,7 @@
 <html class="page" lang="ru">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Седона</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -94,8 +95,8 @@
         <div class="reason__image">
           <img src="img/photo-city.png" alt="Фото города">
         </div>
-        <div class="reason__subitems">
-          <div class="reason__subitem reason-subitem--housing">
+        <div class="reason__subitems reason-subitems">
+          <div class="reason-subitems__item reason-subitems__item--house">
             <b class="reason-subitem__title">Жилье</b>
             <p class="reason-subitem__description">
               Рекомендуем пожить в настоящем мотеле, все как в кино!
