--- a/source/catalog.html
+++ b/source/catalog.html
@@ -105,7 +105,7 @@
     </div>
   </section>
   <section class="video">
-    <h2 class="video__title">Все еще сомневаетесь?</h2>
+    <h2 class="video__title">Все еще сомневаетесь??</h2>
     <p class="video__description">
       Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!
     </p>
