--- a/source/index.html
+++ b/source/index.html
@@ -84,8 +84,8 @@
     </section>
     <section class="reason-wrapper">
       <h2 class="visually-hidden">Первая причина</h2>
-      <div class="reason-wrapper__inner reason">
-        <div class="reason__inner">
+      <div class="reason-wrapper__inner">
+        <div class="reason">
           <div class="reason__content reason__content--blue reason__content--first">
             <h3 class="reason__title reason__title--white">Настощий городок</h3>
             <p class="reason__number reason__number--white">
@@ -99,20 +99,20 @@
             <img src="img/photo-city.png" alt="Фото города">
           </div>
         </div>
-        <div class="reason__subitems reason-subitems">
+        <div class="reason-subitems">
           <div class="reason-subitems__item reason-subitems__item--house">
             <b class="reason-subitem__title">Жилье</b>
             <p class="reason-subitem__description">
               Рекомендуем пожить в настоящем мотеле, все как в кино!
             </p>
           </div>
-          <div class="reason__subitem reason-subitem--souvenir">
+          <div class="reason-subitems__item reason-subitems__item--souvenir">
             <b class="reason-subitem__title">Сувениры</b>
             <p class="reason-subitem__description">
               Не только китайского, но и местного производства!
             </p>
           </div>
-          <div class="reason__subitem reason-subitem--food">
+          <div class="reason-subitems__item reason-subitems__item--food">
             <b class="reason-subitem__title">Еда</b>
             <p class="reason-subitem__description">
               Всегда заказывайте фирменный бургер, вы не разочаруетесь!
@@ -123,7 +123,7 @@
     </section>
     <section class="reason-wrapper">
       <h2 class="visually-hidden">Вторая причина</h2>
-      <div class="reason-wrapper__inner reason">
+      <div class="reason">
         <div class="reason__content reason__content--blue">
           <h3 class="reason__title reason__title--white">Там есть мост дьявола</h3>
           <p class="reason__number reason__number--white">
@@ -140,8 +140,8 @@
     </section>
     <section class="reason-wrapper">
       <h2 class="visually-hidden">Другие причины</h2>
-      <div class="reason-wrapper__inner reason">
-        <div class="reason-content reason__content--gray">
+      <div class="reason reason--others">
+        <div class="reason__content reason__content--gray">
           <h3 class="reason__title reason__title--black">Небольшая площадь</h3>
           <p class="reason__number reason__number--black">
             — &#8470;3 —
@@ -150,7 +150,7 @@
             Все интересные места находятся очень близко
           </p>
         </div>
-        <div class="reason-content reason__content--gray">
+        <div class="reason__content reason__content--gray">
           <h3 class="reason__title reason__title--black">Красивая дорога</h3>
           <p class="reason__number reason__number--black">
             — &#8470;4 —
@@ -159,7 +159,7 @@
             Ехать в Седону из Лас-Вегаса совсем не скучно!
           </p>
         </div>
-        <div class="reason-content reason__content--gray">
+        <div class="reason__content reason__content--gray">
           <h3 class="reason__title reason__title--black">Мало туристов</h3>
           <p class="reason__number reason__number--black">
             — &#8470;5 —
@@ -182,7 +182,7 @@
     </section>
     <section class="map">
       <h2 class="visually-hidden">Карта</h2>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1688040.864980633!2d-111.49418187538568!3d34.27520441861626!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872b08ebcb4c186b%3A0x423927b17fc1cd71!2z0JDRgNC40LfQvtC90LAsINCh0KjQkA!5e0!3m2!1sru!2sru!4v1606498061169!5m2!1sru!2sru" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1688040.864980633!2d-111.49418187538568!3d34.27520441861626!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872b08ebcb4c186b%3A0x423927b17fc1cd71!2z0JDRgNC40LfQvtC90LAsINCh0KjQkA!5e0!3m2!1sru!2sru!4v1606498061169!5m2!1sru!2sru" width="320" height="350" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0">
       </iframe>
     </section>
   </main>
