--- a/source/form.html
+++ b/source/form.html
@@ -71,6 +71,7 @@
         </div>
         <div class="contact-form">
           <h2 class="contact-form__title">Контактная информация:</h2>
+          <div class="contact-form__wrapper">
             <label for="tel-field">
               <span class="contact-form__subitem">Контактный телефон*:</span>
               <input type="tel" name="tel" id="tel-field" class="contact-form__field contact-form__field--tel" value="Введите телефон" required>
@@ -79,6 +80,7 @@
               <span class="contact-form__subitem">Электронная почта*:</span>
               <input type="email" name="email" id="email-field" class="contact-form__field contact-form__field--email" value="Введите e-mail" required>
             </label>
+          </div>
         </div>
         <div class="opinion-form">
           <h2 class="opinion-form__title">Ваше общее впечатление:</h2>
