--- a/source/index.html
+++ b/source/index.html
@@ -75,7 +75,7 @@
       <h2 class="visually-hidden">Описание городка Седона</h2>
       <div class="intro-description__wrapper">
         <p class="intro-description__title">
-          Седона — небольшой  городок в Аризоне,  заслуживающий большего!
+          Седона — небольшой  городок в Аризоне, заслуживающий большего!
         </p>
         <p class="intro-description__reasons">
           Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!
@@ -92,7 +92,7 @@
               &mdash; &#8470;1 &mdash;
             </p>
             <p class="reason__description reason__description--white">
-              Седона не аттракцион для туристов, там течет своя жизнь
+              Седона не аттракцион&nbsp;для туристов, там&nbsp;течет своя жизнь
             </p>
           </div>
           <div class="reason__image">
@@ -115,7 +115,7 @@
           <div class="reason-subitems__item reason-subitems__item--food">
             <b class="reason-subitem__title">Еда</b>
             <p class="reason-subitem__description">
-              Всегда заказывайте фирменный бургер, вы не разочаруетесь!
+              Всегда заказывайте фирменный&nbsp;бургер, вы&nbsp;не разочаруетесь!
             </p>
           </div>
         </div>
@@ -124,13 +124,13 @@
     <section class="reason-wrapper">
       <h2 class="visually-hidden">Вторая причина</h2>
       <div class="reason">
-        <div class="reason__content reason__content--blue">
-          <h3 class="reason__title reason__title--white">Там есть мост дьявола</h3>
+        <div class="reason__content reason__content--blue reason__content--second">
+          <h3 class="reason__title reason__title--white">Там есть мост&nbsp;дьявола</h3>
           <p class="reason__number reason__number--white">
             &mdash; &#8470;2 &mdash;
           </p>
           <p class="reason__description reason__description--white">
-            Да, по нему можно пройти! Если вы осмелитесь, конечно
+            Да, по нему можно пройти! Если&nbsp;вы осмелитесь, конечно
           </p>
         </div>
         <div class="reason__image">
@@ -156,7 +156,7 @@
             — &#8470;4 —
           </p>
           <p class="reason__description reason__description--dark">
-            Ехать в Седону из Лас-Вегаса совсем не скучно!
+            Ехать в Седону из Лас-Вегаса совсем не&nbsp;скучно!
           </p>
         </div>
         <div class="reason__content reason__content--gray">
@@ -165,7 +165,7 @@
             — &#8470;5 —
           </p>
           <p class="reason__description reason__description--dark">
-            Большинство едет в Гранд Каньон и толпится там
+            Большинство едет в Гранд Каньон и толпится&nbsp;там
           </p>
         </div>
       </div>
@@ -175,7 +175,7 @@
       <div class="search__wrapper">
         <span class="search__title">Заинтересовались?</span>
         <p class="search__description">
-        Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне
+        Укажите предполагаемые даты поездки, и&nbsp;мы&nbsp;покажем вам лучшие предложения гостиниц в седоне
         </p>
         <a class="search__button button" href="#">Найти гостиницу</a>
       </div>
