--- a/source/catalog.html
+++ b/source/catalog.html
@@ -9,9 +9,11 @@
 <body class="page__body">
   <header class="page-header">
   <a href="index.html" class="page-header__logo">
-    <svg width="102" height="84" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <path d="M0 0l50.6 59.1L101.7 0H0z" fill="#23A9E1"/><path d="M50.9 0H0v22.5L50.6 84l.3-.4 50.7-60.4V0H50.9zm0 57.1l-.3.4L3.7 1.8h94.4L50.9 57.1z" fill="#491213"/><path d="M50.6 57.5l.3-.4 27.6-32.3c-6.9.9-11.9 6.1-18.6 5-3.4-.6-3.5-2.5-4.5-4.5-.7-1.5-1.9-1.3-3.5-1.9-1.4-.6-2.3-1.7-5.2-1.1-2.5.6-2.8 4.5-6 4.3-1.7-.1-1.8-2.5-4.2-5.5-6.3-7.6-12.2-6.5-16.2.5l30.3 35.9z" fill="#491213"/><path d="M23.3 32.2c.5.6.9 1.3.8 2.1-.1.6-.9 1.5-.3 1.8l2.2-2.8c-.6-.2-5.4-5.8-5.4-6.5-1.1.6-2.1 1.2-3.2 1.7.2.7 1.3 0 1.9 0 .8.1 1.4.6 2 1.2-1.7 1.4-5.9 5-6.4 5.1-.2 0-1.1-.6-1.1-.1 0 .3.9 1 1 1.2.7.9 1.5 1.8 2.2 2.7.6-.3-.1-.7.2-1.2.3-.3 4.9-4.2 6.1-5.2zM18 25.3c.4-.1.6.4 1-.1-.8-1-1.6-1.9-2.4-2.9-.4-.4-.8-.9-.7 0 .1.6-6.1 5.7-6.5 5.8-.5.2-.8-.4-1.1.1.7.9 1.5 1.7 2.2 2.6.2.3.5.6.7.9.3.3.2-.7.2-.6-.1-.5.5-.9.9-1.2 1.5-1.4 5.3-4.6 5.7-4.6zM9.2 24.4c-1.8.5-3.6-.2-4.2-2-.5-1.8.6-3.8 2.1-4.8 1.4-1 3.6-1 4.4.8.3.8.2 1.7-.1 2.5-.2.5-.6 1 .1 1.3.9-1.1 1.7-2.2 2.6-3.3-1.1-.6-1.5-1.7-2.3-2.6-.9-1.1-2.1-2.1-3.5-2.3-2.9-.4-5.6 2.6-5.8 5.2-.1 1.5.4 2.8 1.2 4 .8 1 1.9 1.6 2.4 2.8.3.1 2.7-1 3.3-1.3-.1-.1-.1-.3-.2-.3-.7.2 0 0 0 0zM48.5 60.8c-1.2-.8-4-4.7-4.6-5.3-.1-.1-.2-.3-.3-.4 0 0-.3.2-.2.2-.2.1.1.6-.1.9-.8 1.2-5.8 5-6 5.2-.6.4-1.2-.2-1.5.3.7.9 2.8 3.5 3 3.6.5.1.1-.8.2-1 .1-.4 2.6-2.4 3.5-3.2.3-.3.7.4.9.7.3.5.5 1 .3 1.6-.1.4-.7.9-.3 1.2.6-.7 2.4-2.8 2.6-3 .3-.3-.6 0-.5-.1-.4.2-.7.2-1.1 0-.1-.1-1.1-1.1-1-1.2.4-.4 1-1 1.5-1.1.9-.2 1.6 1.5 1.7 2.1.1.6.1 1.2-.1 1.8-.1.4-.5.7 0 .9.7-1 1.4-1.9 2.1-2.9.2-.2 0-.3-.1-.3-.1-.1.2 0 0 0zM38.3 56.6c2.2-1.9 2.5-5.1.8-7.3-1.9-2.5-5.4-3.1-7.8-1.1-2.2 1.9-2.5 5-.8 7.3 2 2.7 5.2 3 7.8 1.1 1.2-.9-.1.1 0 0zm-.5-4.7a7.4 7.4 0 01-3.7 3.7c-1.8.7-3.1-.8-2.4-2.6a7.4 7.4 0 013.7-3.7c1.9-.7 3.1.9 2.4 2.6-.3.9.1-.2 0 0zM31.9 42c.5.1.9.6 1.3 0-.7-.9-1.5-1.8-2.2-2.6-.6.3 0 .5-.2 1-.2.4-2.6.8-3.2.9.2-.6.9-2.6 1.2-2.8.5-.4.9.4 1.3-.1l-2.7-3.3c-.3-.4-.6-1-1-.7 0 0 0 1.5-.1 1.7-.1.2-.9 3.6-1.9 4.5-.5.4-2.2 1.9-2.7 2.1-.5.2-.8-.6-1.2 0 .8 1 1.7 2 2.5 3 .1.1.6.9.8.9.5.1.1-.9.1-1.1.2-.4 2.5-2.7 3.5-2.9 1.2-.3 3-.8 4.5-.6.3.1-.4 0 0 0zM69.2 52.4c.2.6.3 1.3.2 2-.1.9-1 2.9-2.2 2.3C66 56.1 65 55 64 54.1c.8-.9 1.5-1.7 2.9-1.3.4.1.7 0 .3-.3-.4-.2-3.1-2-3.3-1.8-.3.3.5.9.2 1.5-.2.4-.6.8-.9 1.2-.7-.6-1.9-1.3-1.1-2.3.5-.7 1.3-1.2 2.1-1.3.6-.1 1.8.4 2-.2-1.1-.5-2.2-1-3.3-1.6.2.8-3.3 4.5-4.1 5.5-.1.1-.7.6-.7.8 0 .4.6.1.7.1.5-.2 6.8 5.1 7 5.5.1.3-.2.6 0 .7 0 0 .2.2.3.2.4-.5 4.5-6 5.4-6.2-.8-1.2-1.6-2.4-2.4-3.7-.6.4 0 1.1.1 1.5zM63 59.2c-2.1-1.3-5.6 1.3-6.1 1.5-1 .5-1.8-.5-1.3-1.5.5-.8 1.4-1.2 2.3-1.3.3 0 1.4.2 1.5 0 .1-.2.2-.2 0-.3-.9-.6-1.7-1.2-2.6-1.7-.2 1.1-1.4 1.7-2.1 2.4-.8.9-1.5 1.9-1.5 3.2 0 1.1.7 2.1 1.7 2.7 1.1.6 2.3.1 3.3-.5.6-.4 1.3-.9 1.9-1.2 1-.5 2.3-.1 2 1.3-.3 1.1-1.4 2.1-2.4 2.3-.6.2-1.3.1-1.9-.1-.4-.1-1-.7-1.2-.1 1.2.8 2.3 1.7 3.5 2.5.1-.8.5-1.1 1.1-1.6.7-.6 1.4-1.3 2-2.1 1.2-1.7 1.6-4.1-.2-5.5zM63 59.2c1 .5-.6-.5 0 0zM99.7 19.6c-.7.7-8.4-2.3-9-2.8-.3-.1-.3-1.3-.7-.8l-1.2 1.5c-.4.5-.8 1-1.3 1.5-.3.3-.5.5 0 .7.8-.4 5.4 7.3 5 8.5-.7.4-6.9-5.1-7.1-5.4-.1-.1.3-1-.2-.9-.2 0-.7.9-.9 1.1-.3.4-.6.7-.9 1.1.3.5.5 0 1 0 .4.1 1.8 1.3 2.2 1.7-.7 0-2.7.1-2.9.1-.9.1-.4-.7-1-.9-.8.9-1.5 1.8-2.3 2.8l-1.3 1.6c-.1.1 0 0 .1.1.3.3.1.2.6 0s6.6 4.9 6.8 5.2c.4.5-.2 1 .4 1.2.6-.7 1.2-1.5 1.8-2.2.1-.1.1-.1 0-.2-.4-.4-.5.2-1 .2-.5-.1-4.4-3.4-5.9-4.6 1.8-.1 7.3-.3 8.2-.3.3 0 1.1.9 1.1 1.2-.1.4-.5.6.1.8.5-.6 1-1.1 1.5-1.7l.2-.3c.1-.1.1-.1.2-.3l.2-.2c.4-.5 1.8-2 1.6-2.2-.5-.4-.7.5-1.3-.1-.3-.2-1.2-1.8-1.4-2.2-.3-.4.6-.9 1-1.1.8-.5 3.2-1.2 3.5.3 0 .3-.3.5-.1.7 0 0 .2.2.3.2.2-.2 2.4-2.8 3.3-4-.4-.1-.5-.2-.6-.3zm-7.4 2.2c.1-.1.2-.1 0 0a7 7 0 00-1 .8c-.5-.9-1-1.8-1.6-2.7 1.2.5 2.4 1 3.5 1.5-.2 0-.5.2-.9.4zM82.6 33c-2.4-2-5.6-1.4-7.6.8-1.9 2.3-1.7 5.7.6 7.6 2.3 1.9 5.7 1.4 7.6-.8 1.9-2.3 1.8-5.7-.6-7.6zm-.3 6.6c-1.3 1.3-3.4.1-4.5-.7-1.1-.8-3.1-2.6-1.9-4.1 1.1-1.3 3.1-.2 4.2.5 1.2.8 3.4 2.6 2.3 4.2l-.1.1z" fill="#fff"/><path d="M82.6 33c1.2 1-.3-.2 0 0zM82.3 39.6l.1-.1-.1.1zM76 42.1c.1.1.3.2 0 0-2.9-2.2-6.3-1.6-8.5 1.1l-3 3.6c.4.5.8-.1 1.3.2.4.3 6.2 5.1 6.3 5.4.2.5-.3.5.1.9.2.1 4.5-5.2 4.9-6.2.9-1.8.3-3.8-1.1-5zm-1.3 6.8c-.2.3 0 .1-.7.7-.3.3-6.4-4.7-6.2-4.9.8-.9 2.6-1.6 3.6-1.3 2.2.4 5.2 3.1 3.3 5.5z" fill="#fff"/><path d="M50.6 57.5l.3-.4 27.6-32.3c-6.9.9-11.9 6.1-18.6 5-3.4-.6-3.5-2.5-4.5-4.5-.7-1.5-1.9-1.3-3.5-1.9-1.4-.6-2.3-1.7-5.2-1.1-2.5.6-2.8 4.5-6 4.3-1.7-.1-1.8-2.5-4.2-5.5-6.3-7.6-12.2-6.5-16.2.5l30.3 35.9z" fill="#491213"/><path d="M46.5 70.9l4.1-6.5 4 6.5-4 6.5-4.1-6.5z" fill="#23A9E1"/><path d="M23.3 32.3c.5.6.9 1.3.8 2.1-.1.6-.9 1.6-.3 1.8l2.2-2.8c-.6-.2-5.4-5.8-5.4-6.5-1.1.6-2.1 1.2-3.2 1.7.2.7 1.3 0 1.9 0 .8.1 1.4.6 2 1.2-1.7 1.4-5.9 5-6.4 5.1-.2 0-1.1-.6-1.1-.1 0 .3.9 1 1 1.2.7.9 1.5 1.8 2.2 2.7.6-.3-.1-.7.2-1.2.3-.4 4.9-4.3 6.1-5.2zM18 25.3c.4-.1.6.4 1-.1-.8-1-1.6-1.9-2.4-2.9-.4-.4-.8-.9-.7 0 .1.6-6.1 5.7-6.5 5.8-.5.2-.8-.4-1.1.1.7.9 1.5 1.7 2.2 2.6.2.3.5.6.7.9.3.3.2-.7.2-.6-.1-.5.5-.9.9-1.2 1.5-1.3 5.3-4.6 5.7-4.6zM9.2 24.4c-1.8.5-3.7-.2-4.2-2s.6-3.8 2.1-4.8c1.4-1 3.6-1 4.4.8.3.8.2 1.7-.1 2.5-.2.5-.6 1 .1 1.3.9-1.1 1.7-2.2 2.6-3.3-1.1-.6-1.5-1.7-2.3-2.6-.9-1.1-2.1-2.1-3.5-2.3-2.9-.4-5.6 2.6-5.8 5.2-.1 1.5.4 2.8 1.2 4 .8 1 1.9 1.6 2.4 2.8.3.1 2.7-1 3.3-1.3-.1-.1-.1-.2-.2-.3-.7.2 0 0 0 0zM48.5 60.8c-1.2-.8-4-4.7-4.6-5.3-.1-.1-.2-.3-.3-.4 0 0-.3.2-.2.2-.2.1.1.6-.1.9-.8 1.2-5.8 5-6 5.2-.6.4-1.2-.2-1.5.3.7.9 2.8 3.5 3 3.6.5.1.1-.8.2-1 .1-.4 2.6-2.4 3.5-3.2.3-.3.7.4.9.7.3.5.5 1 .3 1.6-.1.4-.7.9-.3 1.2.6-.7 2.4-2.8 2.6-3 .3-.3-.6 0-.5-.1-.4.2-.7.2-1.1 0-.1-.1-1.1-1.1-1-1.2.4-.4 1-1 1.5-1.1.9-.2 1.6 1.5 1.7 2.1.1.6.1 1.2-.1 1.8-.1.4-.5.7 0 .9.7-1 1.4-1.9 2.1-2.9.2-.2 0-.3-.1-.3-.1-.1.2 0 0 0zM38.3 56.6c2.2-1.9 2.5-5.1.8-7.3-1.9-2.5-5.4-3.1-7.8-1.1-2.2 1.9-2.5 5-.8 7.3 2 2.7 5.2 3 7.8 1.1 1.2-.9-.1.1 0 0zm-.5-4.7a7.4 7.4 0 01-3.7 3.7c-1.8.7-3.1-.8-2.4-2.6.7-1.5 2.2-3.1 3.7-3.7 1.9-.7 3.1.9 2.4 2.6-.4.9.1-.2 0 0zM31.9 42c.5.1.9.5 1.3 0-.7-.9-1.5-1.8-2.2-2.6-.6.3 0 .5-.2 1-.2.4-2.6.8-3.2.9.2-.6.9-2.6 1.2-2.8.5-.4.9.4 1.3-.1l-2.7-3.3c-.3-.4-.6-1-1-.7 0 0 0 1.5-.1 1.7-.1.2-.9 3.6-1.9 4.5-.5.4-2.2 1.9-2.7 2.1-.5.2-.8-.6-1.2 0 .8 1 1.7 2 2.5 3 .1.1.6.9.8.9.5.1.1-.9.1-1.1.2-.4 2.5-2.7 3.5-2.9 1.2-.2 3-.7 4.5-.6.3.1-.4 0 0 0z" fill="#fff"/><path d="M25.6 22.9c-4-.2-2.4-4 .4-4.8 2.6-.8 8.1 1.7 9.8 3.4-2.8.9-6.4.7-9.4.9-.2-3.2-1-2.1-.8.5zM26.6 27.7c-2-1.6-1.4-5.3 1.8-4.1 4 2.1-.9 3.2-1.8 4.1zM35.1 35.4c-8.6-.1-2.8-13.3.1-12.5 3.4 1.1 3 12.6-.1 12.5zM41.2 31.1c-.8 2.5-2.4 3-2.2-.1.2-3.5 2.5-2.7 4.9-4 2-1.1 3.1-5.2 6.6-2.8 1.6 1.1 3.4.2 3.9 1.8 0-.1-4.5 10.3-2 10.3-5 0-2.8-5.9-.9-9.9-1.8.9-4.8 6.7-2.4 7.6-1.3 1.7-5.2 3.9-7.2 2.3-1.5-1.1-.7-3.2-.7-5.2zM45.3 40.7c-3.5 1-8.1-1.2-2.5-2.3 3.5-.7 7.2.7 2.5 2.3.1 0-.1 0 0 0zM49.7 40.6c-.7-1.7.6-3.6 2.7-2.2 1.8 1.2-.9 3.1-2.7 2.2zM46.7 45.2c-2.4-.7-10.5-.6-5.2-2.8 1.7-.6 10.2.2 5.2 2.8zM49.9 44.9c0-1-.5-2.7 1.4-1.9 2.2.8-1.4 2.6-1.4 1.9 0 0 0-.2 0 0zM57.2 48.5c-1.4-1.2-2.9-1.3-4.2 0-1.8-3.3-8.3-2.2-11.4-2.7 1.6 4.1 14.8 4.9 15.6 2.7zM55.3 51c-3.2-.1-6.7-.6-9.6.1 1.9.5 6.4 1.8 2.2 2.9 1.5 2.2 4 2 5.6.1-.7-.3-1-.7-1.6-1.1 1.6-.3 3.2-1.2 3.4-2zM58.9 47.1c-5.3-3.1-4-5.4.4-7.6 2.3-1.1 7.3-5.2 9.4-3.9-3.3 3.9-6.6 7.7-9.8 11.5z" fill="#DC6243"/><path d="M55.1 39.8c-4.5-4.6 6.7-4.2 8.5-5.8 1.3.4 10.8-8.3 13.1-7.7-1.7 1.9-5.2 8.1-7.8 8.1-2 0-4-.3-5.5 1.1-2.2 2.1-5.9 3.1-8.3 4.3z" fill="#F49774"/><path d="M56.6 34.2c-2.5 1.3-4.8-3.9-.5-3.4 2.8.3 5.7-.2 8.3.2-2 2.3-4.7 3.6-7.8 3.2z" fill="#F4B1A4"/><path d="M69.2 52.5c.2.6.3 1.3.2 2-.1.9-1 2.9-2.2 2.3-1.2-.6-2.2-1.7-3.2-2.6.8-.9 1.5-1.7 2.9-1.3.4.1.7 0 .3-.3-.4-.2-3.1-2-3.3-1.8-.3.3.5.9.2 1.5-.2.4-.6.8-.9 1.2-.7-.6-1.9-1.3-1.1-2.3.5-.7 1.3-1.2 2.1-1.3.6-.1 1.8.4 2-.2-1.1-.5-2.2-1-3.3-1.6.2.8-3.3 4.5-4.1 5.5-.1.1-.7.6-.7.8 0 .4.6.1.7.1.5-.2 6.8 5.1 7 5.5.1.3-.2.6 0 .7 0 0 .2.2.3.2.4-.5 4.5-6 5.4-6.2-.8-1.2-1.6-2.4-2.4-3.7-.6.3 0 1 .1 1.5zM63 59.2c-2.1-1.3-5.6 1.3-6.1 1.5-1 .5-1.8-.5-1.3-1.5.5-.8 1.4-1.2 2.3-1.3.3 0 1.3.2 1.5 0 .1-.2.2-.2 0-.3-.9-.6-1.7-1.2-2.6-1.7-.2 1.1-1.4 1.7-2.1 2.4-.8.9-1.5 1.9-1.5 3.2 0 1.1.7 2.1 1.7 2.7 1.1.6 2.3.1 3.3-.5.6-.4 1.3-.9 1.9-1.2 1-.5 2.3-.1 2 1.3-.3 1.1-1.4 2.1-2.4 2.3-.6.2-1.3.1-1.9-.1-.4-.1-1-.7-1.2-.1 1.2.8 2.3 1.7 3.5 2.5.1-.8.5-1.1 1.1-1.6.7-.6 1.4-1.3 2-2.1 1.2-1.7 1.6-4.1-.2-5.5zM63 59.2c1 .6-.6-.5 0 0zM99.7 19.6c-.7.7-8.4-2.3-9-2.8-.3-.1-.3-1.3-.7-.8l-1.2 1.5c-.4.5-.8 1-1.3 1.5-.3.3-.5.5 0 .7.8-.4 5.4 7.3 5 8.5-.7.4-6.9-5.1-7.1-5.4-.1-.1.3-1-.2-.9-.2 0-.7.9-.9 1.1-.3.4-.6.7-.9 1.1.3.5.5 0 1 0 .4.1 1.8 1.3 2.2 1.7-.7 0-2.7.1-2.9.1-.9.1-.4-.7-1-.9-.8.9-1.5 1.8-2.3 2.8l-1.3 1.6c-.1.1 0 0 0 .1.3.3.1.2.6 0s6.6 4.9 6.8 5.2c.4.4-.2 1 .4 1.2.6-.7 1.2-1.5 1.8-2.2.1-.1.1-.1 0-.2-.4-.4-.5.2-1 .2-.5-.1-4.4-3.4-5.9-4.6 1.8-.1 7.3-.3 8.2-.3.3 0 1.1.9 1.1 1.2-.1.4-.5.6.1.8.5-.6 1-1.1 1.5-1.7l.2-.3c.1-.1.1-.1.2-.3l.2-.2c.4-.5 1.8-2 1.6-2.1-.5-.4-.7.5-1.3-.1-.3-.2-1.2-1.8-1.4-2.2-.3-.4.6-.9 1-1.1.8-.5 3.2-1.2 3.5.3 0 .3-.3.5-.1.7 0 0 .2.2.3.2.2-.2 2.4-2.8 3.3-4-.3-.2-.4-.3-.5-.4zm-7.4 2.2c.1 0 .2-.1 0 0a7 7 0 00-1 .8c-.5-.9-1-1.8-1.6-2.7 1.2.5 2.4 1 3.5 1.5-.2.1-.5.2-.9.4zM82.6 33c-2.4-2-5.6-1.4-7.6.8-1.9 2.3-1.7 5.7.6 7.6 2.3 1.9 5.7 1.4 7.6-.8 1.9-2.3 1.8-5.7-.6-7.6zm-.3 6.6s0 .1 0 0c-1.3 1.3-3.4.1-4.5-.7-1.1-.8-3.1-2.6-1.9-4.1 1.1-1.3 3.1-.2 4.2.5 1.2.8 3.4 2.6 2.3 4.2l-.1.1z" fill="#fff"/><path d="M82.6 33c1.2 1-.3-.2 0 0zM82.3 39.7c0-.1 0-.1 0 0l.1-.1c-.1 0-.1.1-.1.1zM76 42.1c.1.1.3.3 0 0-2.9-2.2-6.3-1.6-8.5 1.1l-3 3.6c.4.5.8-.1 1.3.2.4.3 6.2 5.1 6.3 5.4.2.5-.3.5.1.9.2.1 4.5-5.2 4.9-6.2.9-1.8.3-3.7-1.1-5zm-1.3 6.8c-.2.3 0 .1-.7.7-.3.3-6.4-4.7-6.2-4.9.8-.9 2.6-1.6 3.6-1.3 2.2.5 5.2 3.2 3.3 5.5z" fill="#fff"/>
-    </svg>
+    <picture>
+      <source media="(min-width: 1200px)" srcset="img/logotype-desktop.svg.svg">
+      <source media="(min-width: 768px)" srcset="img/logotype-tablet.svg.svg">
+      <img src="img/logotype-mobile.svg.svg" alt="Логотип Седоны">
+    </picture>
   </a>
   <nav class="main-nav">
     <button class="main-nav__toggle">
@@ -45,14 +47,18 @@
     <h1 class="intro-description__title">Фото и видео</h1>
     <div class="intro-description__wrapper">
       <p class="intro-description__text">
-        Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.
+        Не можете решиться на путешествие из-за курса? Фотографии&nbsp;помогут&nbsp;вам забыть о политике и экономике.
       </p>
     </div>
   </section>
   <section class="photos">
     <div class="photos__wrapper">
       <div class="photo photo--full-width">
-        <img src="img/photo-1-mobile.jpg.jpg" alt="Фото Неродные просторы">
+        <picture class="photo__picture">
+          <source media="(min-width: 1200px)" srcset="img/photo-1-desktop.jpg.jpg">
+          <source media="(min-width: 768px)" srcset="img/photo-1-tablet.png">
+          <img src="img/photo-1-mobile.jpg.jpg" alt="Фото Неродные просторы">
+        </picture>
         <div class="photo__text-wrapper">
           <div class="photo__first-block">
             <h3 class="photo__title">Неродные просторы</h3>
@@ -61,9 +67,10 @@
             </p>
           </div>
           <div class="photo__second-block">
-            <svg width="23" height="21" viewBox="0 0 23 21" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path opacity="0.3" d="M12.9636 3.78L12.3364 6.825L11.7091 9.45H14.3227H20.8045V11.55C20.8045 11.55 20.8045 11.55 20.8045 11.655L17.7727 18.9H8.36364V8.4L12.9636 3.78ZM2.09091 10.5V18.9V10.5ZM13.8 0L6.9 6.93C6.48182 7.245 6.27273 7.77 6.27273 8.4V18.9C6.27273 20.055 7.21364 21 8.36364 21H17.7727C18.6091 21 19.3409 20.475 19.6545 19.74L22.7909 12.285C22.8955 12.075 22.8955 11.76 22.8955 11.55V9.45H23C23 8.295 22.0591 7.35 20.9091 7.35H14.3227L15.3682 2.52V2.205C15.3682 1.785 15.1591 1.365 14.95 1.05L13.8 0ZM4.18182 8.4H0V21H4.18182V8.4Z" fill="black"/>
-            </svg>
+            <picture>
+              <source media="(min-width: 1200px)" srcset="img/like-icon-white.svg.svg">
+              <img src="img/like-icon.svg.svg" alt="Иконка лайка">
+            </picture>
             <p class="photo__number">
               1350
             </p>
@@ -71,7 +78,11 @@
         </div>
       </div>
       <div class="photo">
-        <img src="img/photo-2-mobile.jpg.jpg" alt="Фото Местная растительность">
+        <picture class="photo__picture">
+          <source media="(min-width: 1200px)" srcset="img/photo-2-desktop.jpg.jpg">
+          <source media="(min-width: 768px)" srcset="img/photo-2-tablet.png">
+          <img src="img/photo-2-mobile.jpg.jpg" alt="Фото Неродные просторы">
+        </picture>
         <div class="photo__text-wrapper">
           <div class="photo__first-block">
             <h3 class="photo__title">Местная растительность</h3>
@@ -80,9 +91,10 @@
             </p>
           </div>
           <div class="photo__second-block">
-            <svg width="23" height="21" viewBox="0 0 23 21" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path opacity="0.3" d="M12.9636 3.78L12.3364 6.825L11.7091 9.45H14.3227H20.8045V11.55C20.8045 11.55 20.8045 11.55 20.8045 11.655L17.7727 18.9H8.36364V8.4L12.9636 3.78ZM2.09091 10.5V18.9V10.5ZM13.8 0L6.9 6.93C6.48182 7.245 6.27273 7.77 6.27273 8.4V18.9C6.27273 20.055 7.21364 21 8.36364 21H17.7727C18.6091 21 19.3409 20.475 19.6545 19.74L22.7909 12.285C22.8955 12.075 22.8955 11.76 22.8955 11.55V9.45H23C23 8.295 22.0591 7.35 20.9091 7.35H14.3227L15.3682 2.52V2.205C15.3682 1.785 15.1591 1.365 14.95 1.05L13.8 0ZM4.18182 8.4H0V21H4.18182V8.4Z" fill="black"/>
-            </svg>
+            <picture>
+              <source media="(min-width: 1200px)" srcset="img/like-icon-white.svg.svg">
+              <img src="img/like-icon.svg.svg" alt="Иконка лайка">
+            </picture>
             <p class="photo__number">
               143
             </p>
@@ -90,7 +102,11 @@
         </div>
       </div>
       <div class="photo">
-        <img src="img/photo-3-mobile.jpg.jpg" alt="Фото Дорога на север">
+        <picture class="photo__picture">
+          <source media="(min-width: 1200px)" srcset="img/photo-3-desktop.jpg.jpg">
+          <source media="(min-width: 768px)" srcset="img/photo-3-tablet.png">
+          <img src="img/photo-3-mobile.jpg.jpg" alt="Фото Неродные просторы">
+        </picture>
         <div class="photo__text-wrapper">
           <div class="photo__first-block">
             <h3 class="photo__title">Дорога на север</h3>
@@ -99,9 +115,10 @@
             </p>
           </div>
           <div class="photo__second-block">
-            <svg width="23" height="21" viewBox="0 0 23 21" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path opacity="0.3" d="M12.9636 3.78L12.3364 6.825L11.7091 9.45H14.3227H20.8045V11.55C20.8045 11.55 20.8045 11.55 20.8045 11.655L17.7727 18.9H8.36364V8.4L12.9636 3.78ZM2.09091 10.5V18.9V10.5ZM13.8 0L6.9 6.93C6.48182 7.245 6.27273 7.77 6.27273 8.4V18.9C6.27273 20.055 7.21364 21 8.36364 21H17.7727C18.6091 21 19.3409 20.475 19.6545 19.74L22.7909 12.285C22.8955 12.075 22.8955 11.76 22.8955 11.55V9.45H23C23 8.295 22.0591 7.35 20.9091 7.35H14.3227L15.3682 2.52V2.205C15.3682 1.785 15.1591 1.365 14.95 1.05L13.8 0ZM4.18182 8.4H0V21H4.18182V8.4Z" fill="black"/>
-            </svg>
+            <picture>
+              <source media="(min-width: 1200px)" srcset="img/like-icon-white.svg.svg">
+              <img src="img/like-icon.svg.svg" alt="Иконка лайка">
+            </picture>
             <p class="photo__number">
               96
             </p>
@@ -109,7 +126,11 @@
         </div>
       </div>
       <div class="photo">
-        <img src="img/photo-4-desktop%201.jpg" alt="Фото Мост дьявола">
+        <picture class="photo__picture">
+          <source media="(min-width: 1200px)" srcset="img/photo-4-desktop.jpg.jpg">
+          <source media="(min-width: 768px)" srcset="img/photo-4-tablet.png">
+          <img src="img/photo-4-mobile.jpg.jpg" alt="Фото Неродные просторы">
+        </picture>
         <div class="photo__text-wrapper">
           <div class="photo__first-block">
             <h3 class="photo__title">Мост дьявола</h3>
@@ -118,9 +139,10 @@
             </p>
           </div>
           <div class="photo__second-block">
-            <svg width="23" height="21" viewBox="0 0 23 21" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path opacity="0.3" d="M12.9636 3.78L12.3364 6.825L11.7091 9.45H14.3227H20.8045V11.55C20.8045 11.55 20.8045 11.55 20.8045 11.655L17.7727 18.9H8.36364V8.4L12.9636 3.78ZM2.09091 10.5V18.9V10.5ZM13.8 0L6.9 6.93C6.48182 7.245 6.27273 7.77 6.27273 8.4V18.9C6.27273 20.055 7.21364 21 8.36364 21H17.7727C18.6091 21 19.3409 20.475 19.6545 19.74L22.7909 12.285C22.8955 12.075 22.8955 11.76 22.8955 11.55V9.45H23C23 8.295 22.0591 7.35 20.9091 7.35H14.3227L15.3682 2.52V2.205C15.3682 1.785 15.1591 1.365 14.95 1.05L13.8 0ZM4.18182 8.4H0V21H4.18182V8.4Z" fill="black"/>
-            </svg>
+            <picture>
+              <source media="(min-width: 1200px)" srcset="img/like-icon-white.svg.svg">
+              <img src="img/like-icon.svg.svg" alt="Иконка лайка">
+            </picture>
             <p class="photo__number">
               254
             </p>
@@ -134,21 +156,19 @@
       Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!
     </p>
     <div class="video__wrapper">
-      <img src="img/video-mobile.jpg.jpg" alt="Видеопрезентация">
+      <picture>
+        <source media="(min-width: 1200px)" srcset="img/video-desktop.jpg">
+        <source media="(min-width: 768px)" srcset="img/video-tablet.png">
+        <img src="img/video-mobile.jpg.jpg" alt="Видеопрезентация">
+      </picture>
       <div class="video__controls">
-        <div class="video__repeat">
-          <button class="repeat__btn"></button>
-        </div>
+        <button class="video__repeat-btn">ПОВТОР</button>
         <div class="video__time">
-          <div class="time-line"></div>
-          <div class="time-cirle"></div>
+          <div class="video__time-line"></div>
+          <button class="video__cirle-btn">КРУГ</button>
         </div>
-        <div class="video__subtitiles">
-          <button class="subtitiles__btn"></button>
-        </div>
-        <div class="video__fullscreen">
-          <button class="fullscreen__btn"></button>
-        </div>
+        <button class="video__subtitiles-btn">СУБТИТРЫ</button>
+        <button class="video__fullscreen-btn">ПОЛНЫЙ ЭКРАН</button>
       </div>
     </div>
   </section>
